--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body {
     display: block;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
+    width: 100%;
     background-color: #f0f0f0;
 }
 
@@ -18,6 +19,7 @@ body {
 .container {
     max-width: 800px;
     width: 100%;
+    height: 100%;
     padding: 20px;
     background-color: #ffffff;
     border-radius: 10px;
